--- a/workflow1.html
+++ b/workflow1.html
@@ -1711,7 +1711,7 @@ overview$Plot</code></pre>
 <p>Usually this threshold is suggested by the guidelines of the kit used for the analysis (e.g. mean of buffer signal + n standard deviations). However, it is a good practice to always check the distribution of signal intensity of the dataset. To help the user with this operation, the <strong>markers_distribution()</strong> have been implemented. This function takes as input data in long format (“<em>data_long</em>”), and returns a named list (here assigned to ‘<em>distribution</em>’) containing the following objects:</p>
 <ul>
 <li>“Plot_density”: a density plot showing the distribution of the signal intensity values for both the classes. In addition, the function allows the user to set both the y_lim and x_lim values to provide a better visualization.</li>
-<li>“ROC”: a ROC cure showing how many real positive samples would be found positive (SE) and how many real negative samples would be found negative (SP) in function of signal threshold. NB: these SE and SP are refereed to the signal intensity threshold considering all the markers together; it is NOT equal to the SE/SP of a single marker/combination (shown later in <strong>Sensitivity and specificity</strong>).</li>
+<li>“ROC”: a ROC curve showing how many real positive samples would be found positive (SE) and how many real negative samples would be found negative (SP) in function of signal threshold. NB: these SE and SP are refereed to the signal intensity threshold considering all the markers together; it is NOT equal to the SE/SP of a single marker/combination (shown later in <strong>Sensitivity and specificity</strong>).</li>
 <li>“Coord”: a dataframe that contains the coordinates of the above described “ROC” (threshold, SP and SE) that have at least a min SE (40 by default) and a min SP (80 by default). These limits can be set manually by specifying min_SE and min_SP.</li>
 </ul>
 <p>In case of lack of a priori known threshold the user can set set signalthr_prediction= TRUE. In this way the function provides a “suggested signal threshold” that corresponds to the median of the singnal threshold values (in “Coord”) at which SE/SP are grater or equal to their set minimal values (min_SE and min_SP), and it adds this threshold on the “Plot_density” object as a dashed black line. The use of the median allows to pick a threshold whose SE/SP are not too close to the limits (min_SE and min_SP), but it is recommended to always inspect “Coord” and choose the most appropriate signal threshold by considering SP, SE and Youden index.</p>
@@ -1722,7 +1722,7 @@ overview$Plot</code></pre>
 ## set min_SE and min_SP</code></pre>
 <pre><code>## Warning in markers_distribution(data = data_long, case_class = &quot;A&quot;, y_lim =
 ## 0.0015, : The suggested signal threshold in $Plot_density is the median of the
-## signal thresholds at which SE&gt;min_SE and SP&gt;min_SP. This is ONLY a suggestion.
+## signal thresholds at which SE&gt;=min_SE and SP&gt;=min_SP. This is ONLY a suggestion.
 ## Please check if signal threshold is suggested by your analysis kit guidelines
 ## instead, and remember to check $Plot_density to better judge our suggested
 ## threshold by inspecting the 2 distributions.</code></pre>
